# optitime

./: .gitignore  README.md  pyproject.toml
docs/: api.md  explainability.md  parameters.md  project_report.md
src/optitime/: __init__.py  model.py
src/optitime/datasets/: __init__.py
tests/: run_airlines_visuals.py  run_sales_example.py  sales.csv  test_datasets.py
