[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "optitime-prophet"
version = "0.1.0"
description = "A Prophet-inspired forecasting library with autoregressive, changepoint, and diagnostic enhancements."
readme = "README.md"
authors = [
  {name = "OptiWisdom Analytics", email = "contact@optiwisdom.ai"},
]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
]
license = {text = "MIT"}
keywords = ["forecasting", "prophet", "time-series", "autoregressive", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/optiwisdom/optitime"
Documentation = "https://github.com/optiwisdom/optitime"
Issues = "https://github.com/optiwisdom/optitime/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
optitime = ["datasets/*.csv"]
